# triplecheck

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  testpublish.yml
src/: triplecheck.py  triplecheck_copy.py
src/triplecheck/: triplecheck.py
tests/: test_triplecheck.py
