[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "triplecheck"
version = "2.1.0"
description = "Two- or three-way comparison tool for files and directories"
readme = "README.md"
keywords = [
  "backup-verification",
  "checksum",
  "compare",
  "diff",
  "directory-diff",
  "hash",
  "media-management",
  "metadata",
  "verification",
  "xxhash",
  "blake3",
]
license = { text = "MIT" }
authors = [
  { name = "Luis Gómez Gutiérrez" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "blake3>=1.0.8",
  "xxhash>=3.7",
]
urls.Homepage = "https://github.com/lucuma13/triplecheck"
scripts.triplecheck = "triplecheck.triplecheck:main"

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "taplo",
  "ty",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/triplecheck" ]
build.targets.sdist.include = [
  "src/triplecheck/",
  "tests/",
]

[tool.ruff]
line-length = 120
lint.select = [ "ANN", "B", "BLE", "C", "E", "F", "FURB", "I", "PL", "PT", "PTH", "RUF", "SIM", "UP", "W" ]
lint.ignore = [
  "C901", # complexity: walk_tree and cmd_compare_dirs are intentionally dense
]
lint.per-file-ignores."tests/*.py" = [
  "ANN",     # annotations on tests add noise without value
  "PLR2004", # exact values in assertions are the point
]

[tool.pytest]
ini_options.addopts = "--strict-markers --cov=src --cov-branch --cov-report=term-missing --cov-report=xml"
