[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "triplecheck"
version = "2.1.0"
description = "Two- or three-way comparison tool for files and directories"
readme = "README.md"
keywords = [
  "backup-verification",
  "blake3",
  "checksum",
  "compare",
  "diff",
  "directory-diff",
  "hash",
  "media-management",
  "metadata",
  "verification",
  "xxhash",
]
license = { text = "MIT" }
authors = [
  { name = "Luis Gómez Gutiérrez" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "blake3>=1.0.8",
  "xxhash>=3.7",
]
urls.Homepage = "https://github.com/lucuma13/triplecheck"
scripts.triplecheck = "triplecheck.triplecheck:main"

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "taplo",
  "ty",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/triplecheck/" ]
build.targets.sdist.include = [ "/src/triplecheck/", "/tests/" ]
build.targets.sdist.exclude = [ "/.github/" ]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120
lint.select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C",    # flake8-comprehensions + mccabe
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle errors
  "F",    # Pyflakes
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # Pylint
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific
  "S",    # flake8-bandit (security)
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "C901", # complexity: walk_tree and cmd_compare_dirs are intentionally dense
]
lint.per-file-ignores."tests/*.py" = [
  "ANN",     # annotations on tests add noise without value
  "PLR2004", # exact values in assertions are the point
  "S101",    # asserts are the point of a test
  "S311",    # random is for fuzz-data generation, not cryptography
]

[tool.pytest]
ini_options.addopts = "--strict-markers --cov=src --cov-branch --cov-report=term-missing --cov-report=xml"
